--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,4 +1,4 @@
-@Book{intro,
+@Book{intro1,
   title = "Uma Introdução às Energias Renováveis: 
   Eólica, Fotovoltaica e Mini-hídrica",
   author = "Rui Castro",
@@ -9,6 +9,27 @@
   pages = "10"
 }
 
+@Book{intro2,
+  title = "Uma Introdução às Energias Renováveis: 
+  Eólica, Fotovoltaica e Mini-hídrica",
+  author = "Rui Castro",
+  publisher = "IST Press",
+  year = 2012,
+  edition = "2nd",
+  isbn = "978-972-8469-01-6",
+  pages = "179"
+}
+
+@Book{intro3,
+  title = "Uma Introdução às Energias Renováveis: 
+  Eólica, Fotovoltaica e Mini-hídrica",
+  author = "Rui Castro",
+  publisher = "IST Press",
+  year = 2012,
+  edition = "2nd",
+  isbn = "978-972-8469-01-6",
+  pages = "123"
+}
 
 @misc{era5,
   title        = "Complete ERA5 from 1940: Fifth generation of ECMWF atmospheric reanalyses of the global climate. Copernicus Climate Change Service (C3S) Data Store (CDS). DOI: 10.24381/cds.143582cf",
@@ -16,3 +37,37 @@
   year         = 2017,
   note         = "Accessed: 2024-02-01"
 }
+
+@misc{omie,
+  title        = "Day-ahead market hourly price in Portugal | OMIE",
+  author       = "{OMI, Polo Español S.A. (OMIE)}",
+  howpublished = "\url{https://www.omie.es/en/file-access-list?parents%5B0%5D=/&parents%5B1%5D=Day-ahead%20Market&parents%5B2%5D=1.%20Prices&dir=%20Day-ahead%20market%20hourly%20price%20in%20Portugal&realdir=marginalpdbcpt}",
+  year         = 2024,
+  note         = "Accessed: 2024-02-01"
+}
+
+@misc{windpower,
+  title        = "Enercon E70/2000 - Manufacturers and turbines - Online access - The Wind Power",
+  author       = "{The Wind Power}",
+  howpublished = "\url{https://www.thewindpower.net/turbine_en_174_enercon_e70-2000.php}",
+  year         = 2024,
+  note         = "Accessed: 2024-02-01"
+}
+
+@misc{windpower2,
+  title        = "Madrinha (Portugal) - Wind farms - Online access - The Wind Power",
+  author       = "{The Wind Power}",
+  howpublished = "\url{https://www.thewindpower.net/windfarm_en_4063_madrinha.php}",
+  year         = 2024,
+  note         = "Accessed: 2024-02-01"
+}
+
+@misc{cfgrib,
+  title        = "ecmwf/cfgrib: A Python interface to map GRIB files to the NetCDF Common Data Model following the CF Convention using ecCodes",
+  author       = "{ECMWF}",
+  howpublished = "\url{https://github.com/ecmwf/cfgrib}",
+  year         = 2024,
+  note         = "Accessed: 2024-02-01"
+}
+
+
