--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -70,4 +70,10 @@
   note         = "Accessed: 2024-02-01"
 }
 
-
+@misc{mler,
+  title        = "Maximum likelihood estimation from scratch | R-bloggers",
+  author       = "{R on Alejandro Morales' Blog}",
+  howpublished = "\url{https://www.r-bloggers.com/2019/08/maximum-likelihood-estimation-from-scratch/}",
+  year         = 2024,
+  note         = "Accessed: 2024-02-01"
+}
